--- a/Lesson2/examples/index-03.html
+++ b/Lesson2/examples/index-03.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lesson2 OOP ES6</h1>
+    <h1>Lesson2 Factory</h1>
     <script>
         'use strict';
 
@@ -53,9 +53,45 @@
                 this.diller=diller;
                 this.cars = []; //фура
                 this.sumOrder=0; //сумма заказа
-                this.initOrder(); //в этом методе заполним массив cars 
+                this.initOrder(); //в этом методе заполним массив cars
+
+                this.showInfo();
+            }
+
+            initOrder(){
+                for(let i = 0 ; i< this.countCars; i++){
+                    this.cars.push(this.factory.createCar(this.models[parseInt(Math.random() * this.models.length)]));
+                    this.sumOrder+=this.cars[i].price;
+                }
+            }
+
+            showInfo(){
+                this.cars.forEach(car=> console.log(`Автомобиль  ${car.title} стоит ${car.price}`));
+                console.log(`Общяяя сумма ${this.sumOrder}`);
             }
         }
+
+        class Diller{
+            constructor(titleDiller, countYears) {
+                this.titleDiller = titleDiller;
+                this.countYears=countYears;
+            }
+        }
+
+        class Main{
+            static run(){
+                //const COUNT = parseInt(Math.random() * 20 + 10); // получаем случайное число от 10 до 30
+                const COUNT = parseInt(5);
+                const MODELS = ['Skoda','Vesta','Grant'];
+
+                const FACTORY = new Factory('VAZ');
+                const DILLER = new Diller('EEEE', 20);
+                const ORDER = new Order(10,FACTORY,MODELS,DILLER);
+            }
+
+        }
+
+        Main.run();
 
     </script>
 
