--- a/Lesson2/homework/index.html
+++ b/Lesson2/homework/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>eShop</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
   <header>
+      <div class="logo">E-shop</div>
+
     <button class="cart-button" type="button">Корзина</button>
   </header>
 
   <main>
-    <div class="goods-list"></div>
+    <div class="goods-list">
+
+    </div>
   </main>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
